--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.43",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.2.0",
@@ -24,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy" : "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -47,5 +50,6 @@
   "devDependencies": {
     "@types/react-beautiful-dnd": "^13.1.2",
     "@types/styled-components": "^5.1.25"
-  }
+  },
+  "homepage" : "https://PPJINHONG.github.io/kanbanboard-react-recoil/"
 }
